--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Basic
 title: zhizheng wang
-subtitle: I use admob to generate revenue#A blog-orientation theme for zhizheng wang
+subtitle: I use admob to generate revenue
+#A blog-orientation theme for zhizheng wang
 welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
 description: Vno Jekyll is a port of my Ghost theme vno.
 creator: <a href="http://onev.cat">@onevcat</a>
